--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -21,6 +21,6 @@
     = render 'site/news'
   - if current_user
     #roundshape
-      = "用户信息"
+      = t 'site.user_info' 
       %hr
       = render 'account/user'
