--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,13 +2,16 @@
 %html
   %head 
     %title= t 'site.name' 
-    = stylesheet_link_tag 'hover_drop_2'
+    = #stylesheet_link_tag 'hover_drop_2'
     = #javascript_include_tag :defaults
-    = javascript_include_tag "iefix"
+    = #javascript_include_tag "iefix"
     = csrf_meta_tag
     = javascript_include_tag 'jquery.min.js'
     = javascript_include_tag 'rails'
     = formtastic_stylesheet_link_tag
+
+    = javascript_include_tag 'ddmenu'
+    = stylesheet_link_tag 'ddmenu'
 
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
@@ -29,14 +32,15 @@
           |
           = link_to t('site.register'), new_user_registration_path
       #navibar
-        %ul{:id=>'menu'}
+        %ul.topnav 
+          /{:id=>'menu'}
           %li= link_to t('site.label'), '/'
           %li= link_to t('site.notice_center'), notices_path if user_signed_in?
 
           - if user_signed_in?
             %li{:class=>'sub'} 
               = link_to t('site.task'), tasks_url
-              %ul
+              %ul.subnav
                 %li= link_to t('site.new_task'), new_task_url if user_signed_in?
                 %li= link_to t('site.task_type',:task_type=>'taobao'), :controller=>'board', :action=>'task_list', :task_type => 'taobao'
                 %li= link_to t('site.task_type',:task_type=>'paipai'), :controller=>'board', :action=>'task_list', :task_type => 'paipai'
@@ -45,7 +49,7 @@
           - if user_signed_in?
             %li{:class=>'sub'}
               =link_to t('site.user_center'), current_user
-              %ul
+              %ul.subnav
                 - if guest? or user?
                   %li= link_to t('site.my_account'), '/m/index'
                   %li= link_to t('trade.charge_payment'), '/m/charge'
@@ -55,10 +59,10 @@
                   %li= link_to t('site.my_cash'),:controller=>'board', :action=> 'task_show', :task_type => 'cash'
                   %li= link_to t('site.service'), issues_path 
 
-          - if admin? or manager?
+          - if admin?
             %li{:class=>'sub'} 
               = link_to t('site.manage_center')
-              %ul
+              %ul.subnav
                 %li= link_to t('site.user_manage'), users_path
                 %li= link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
                 %li= link_to t('site.big_cash'), '/t/big_cash'
